fix: dark mode style (#3127)
Submit a pull request for this project.

<!-- 如果这个Pull Request有对应的Issue，你可以复制Issue的相关信息。 -->

# Why? 
<!-- 
> 对应哪个issue?
> 为什么要这个pull request？
> 背景故事或原因是怎样的？
> 你理解的业务需求是怎样的？ 
-->


# What?
<!-- 
> 这是一个什么Pull Request？
> 描述一下是什么？
> 对哪些人有好处？ 
-->


# How?
<!-- 
> 大概描述下，如何具体实现的这个Pull Request？ 
-->

--- a/packages/datasheet/src/pc/components/api_panel/styles.module.less
+++ b/packages/datasheet/src/pc/components/api_panel/styles.module.less
@@ -106,7 +106,6 @@
       text-align: center;
       margin: 0 !important;
       background: var(--dc02);
-      max-width: 16.65%;
       &::before {
         border: 0 !important;
       }
