--- a/packages/datasheet/src/pc/styles/global_components/other.less
+++ b/packages/datasheet/src/pc/styles/global_components/other.less
@@ -192,6 +192,12 @@ button:focus-visible {
   outline: unset !important;
 }
 
+.taskModal {
+  border: 1px solid var(--borderCommon);
+  background-color: var(--bgCommonHighest);
+  box-shadow: var(--shadowCommonDefault);
+}
+
 @media screen and (max-width: 768px) {
   .ant-drawer {
     z-index: 1200;
